fix(mettl7): harden differential evidence provenance