@@ -3,6 +3,8 @@ package totah.lab.athena.surface.differential;
 import totah.lab.gaia.structure.ResidueId;
 
 import java.util.List;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
@@ -17,8 +19,12 @@ public record DifferentialSurfaceMap(
         Objects.requireNonNull(mode, "mode");
         Objects.requireNonNull(options, "options");
         residues = List.copyOf(Objects.requireNonNull(residues, "residues"));
-        queryNeighborhoods = Map.copyOf(
-                Objects.requireNonNull(queryNeighborhoods, "queryNeighborhoods"));
+        Objects.requireNonNull(queryNeighborhoods, "queryNeighborhoods");
+        LinkedHashMap<ResidueId, Map<ResidueId, Double>> ordered =
+                new LinkedHashMap<>();
+        queryNeighborhoods.forEach((residue, members) -> ordered.put(residue,
+                Collections.unmodifiableMap(new LinkedHashMap<>(members))));
+        queryNeighborhoods = Collections.unmodifiableMap(ordered);
     }
 
     public Optional<DifferentialResidueScore> score(ResidueId residue) {
